--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.tunesevenui.tunesevenui">
    <application
+
+
         android:label="tunesevenui"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
@@ -25,6 +27,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+<!--       <uses-permission android:name="android.permission.INTERNET"/>-->
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
